final tree model

--- a/index.ipynb
+++ b/index.ipynb
@@ -1586,6 +1586,24 @@
     "    per=mean_absolute_percentage_error(val_y, preds_val)\n",
     "    print(f\"Max leaf nodes: {max_leaf_nodes}\\tMAE: {mae}\\tMAPE: {per}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf9c23c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for max_leaf_nodes in [391,392,393]:\n",
+    "    my_mae = get_mae(max_leaf_nodes, train_X, val_X, train_y, val_y)\n",
+    "    print(\"Max leaf nodes: %d  \\t\\t Mean Absolute Error:  %d\" %(max_leaf_nodes, my_mae))\"\"\"\n",
+    "\n",
+    "#final model\n",
+    "new_melbourne_model = DecisionTreeRegressor(max_leaf_nodes=365,random_state=1)\n",
+    "new_melbourne_model.fit(X,y)\n",
+    "pred=new_melbourne_model.predict(X)\n",
+    "print(\"Final mae with tree: \",mean_absolute_error(y,pred))\n"
+   ]
   }
  ],
  "metadata": {
